install/mtls-stack/observatorium/obs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: observatorium
  labels:
    name: observatorium
spec:
  containers:
  - name: observatorium
    args:
    - --log.level=debug
    - --web.listen=0.0.0.0:8080
    - --web.internal.listen=0.0.0.0:8081
    - --metrics.read.endpoint=http://thanos-query.monitoring.svc.cluster.local:9090
    - --metrics.write.endpoint=http://thanos-receive.monitoring.svc.cluster.local:19291
    - --tenants.config=/etc/observatorium/tenants.yaml
    - --rbac.config=/etc/observatorium/rbac.yaml
    - --tls.server.cert-file=/var/run/mtls/tls.pem
    - --tls.server.key-file=/var/run/mtls/tls.key
    - --tls.internal.server.cert-file=/var/run/mtls/tls.pem
    - --tls.internal.server.key-file=/var/run/mtls/tls.key
    image: quay.io/observatorium/api
    ports:
    - containerPort: 8081
      name: internal
    - containerPort: 8080
      name: public
    volumeMounts:
    - name: tenants
      mountPath: /etc/observatorium
    - name: obs-certs
      mountPath: /var/run/mtls
  volumes:
  - name: tenants
    configMap:
      name: tenants
  - name: obs-certs
    configMap:
      name: obs-certs
