install/mtls-stack/observatorium/obs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: observatorium-svc
spec:
  selector:
    name: observatorium
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
