install/mtls-stack/observatorium/obs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: observatorium
spec:
  to:
    kind: Service
    name: observatorium
  port:
    targetPort: public
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
